# COVID-19

./: .gitignore  .gitmodules  CMakeLists.txt  Core_distance.csv  Core_duration.csv  Fangcang_distance.csv  Fangcang_duration.csv  Fever_distance.csv  Fever_duration.csv  HuoshenLeishen_distance.csv  HuoshenLeishen_duration.csv  Locations.ipynb  README.md  algorithm.dio  document.docx  document.md  hello.cc  hello.cpp  loacations.csv  makedetect  map.html  solution.txt  store.json
data/: Core_distance.csv  Core_distance.xlsx  Core_duration.csv  Core_duration.xlsx  Fangcang_distance.xlsx  Fangcang_duration.xlsx  Fever_distance.xlsx  Fever_duration.csv  Fever_duration.xlsx  HuoshenLeishen_distance.xlsx  HuoshenLeishen_duration.csv  HuoshenLeishen_duration.xlsx  SolPlot_.txt  distances.csv  distances.xlsx  distances_origin.csv  fangcang-hospitals.json  hospitals-wuhan.json  hospitals.xlsx  huoshen-leishen-hospital.json  loacations.csv  loacations.xlsx  locations.csv  locations.xlsx  requirements.csv  store.json  wuhandata.txt.0.2091252.res  wuhandata.txt.0.2093859.res  wuhandata.txt.0.2094460.res  wuhandata.txt.0.2095704.res  wuhandata.txt.0.2095952.res  wuhandata.txt.0.2096621.res  wuhandata.txt.0.2102112.res  wuhandata.txt.0.2106968.res  wuhandata.txt.0.2109593.res  wuhandata.txt.0.2114257.res  wuhandata.txt.0.2115382.res  wuhandata.txt.0.2143793.res  wuhandata.txt.0.958724.res  wuhandata.txt.0.972242.res  (+5 more)
data/demo/: Christofides_1_50.txt  (+398 more)
src/: CMakeLists.txt  ccvrp_md.cc  ccvrp_md_minmax.cc  ccvrp_multi_depot_raw.cc  ccvrp_raw.cc  cvrp.cc  cvrp_raw.cc  hello.cc  vrp.cc
(+743 files in other folders)
